<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="@color/background_color">

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:orientation="vertical">

        <TextView
            android:id="@+id/fragment_menu_logo"
            style="@style/TextBox"
            android:layout_width="wrap_content"
            android:layout_height="0dp"
            android:layout_gravity="center_horizontal"
            android:layout_weight="1"
            android:padding="@dimen/keyline_1"
            android:text="@string/app_name"
            android:textSize="40sp"/>

        <Button
            android:id="@+id/fragment_menu_start"
            style="@style/TextBox"
            android:layout_width="wrap_content"
            android:layout_height="0dp"
            android:layout_gravity="center_horizontal"
            android:layout_weight="1"
            android:text="@string/fragment_menu_start"
            android:textSize="20sp"/>

        <Button
            android:id="@+id/fragment_menu_about"
            style="@style/TextBox"
            android:layout_width="wrap_content"
            android:layout_height="0dp"
            android:layout_gravity="center_horizontal"
            android:layout_weight="1"
            android:text="@string/fragment_menu_about"
            android:textSize="20sp"/>
    </LinearLayout>
</RelativeLayout>