<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="@color/background_color">

    <TextView
        android:id="@+id/fragment_about_title"
        style="@style/TextBox"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:padding="@dimen/keyline_1"
        android:text="@string/about_us_title"
        android:textSize="40sp"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="horizontal"
        android:gravity="center_vertical"
        android:layout_below="@+id/fragment_about_title">

        <TextView
            style="@style/TextBox"
            android:layout_weight="1"
            android:layout_width="0dp"
            android:gravity="center"
            android:id="@+id/fragment_about_left"
            android:layout_height="match_parent"
            android:padding="@dimen/keyline_1"
            android:text="@string/about_left_tip"
            android:textSize="30sp"/>

        <TextView
            style="@style/TextBox"
            android:layout_weight="1"
            android:layout_width="0dp"
            android:gravity="center"
            android:id="@+id/fragment_about_right"
            android:layout_height="match_parent"
            android:padding="@dimen/keyline_1"
            android:text="@string/about_right_tip"
            android:textSize="30sp"/>
    </LinearLayout>


</RelativeLayout>